src/test/ui/type-alias-impl-trait/generic_duplicate_param_use4.stderr
error[E0277]: `T` doesn't implement `std::fmt::Debug`
  --> $DIR/generic_duplicate_param_use4.rs:8:1
   |
LL | type Two<T, U> = impl Debug;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `T` cannot be formatted using `{:?}` because it doesn't implement `std::fmt::Debug`
LL | 
LL | fn one<T: Debug>(t: T) -> Two<T, T> {
   |        -- help: consider further restricting this bound: `T: std::fmt::Debug +`
LL |
LL |     t
   |     - this returned value is of type `T`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `T`
   = note: the type `T` must only rely on bounds defined on the type

error: defining opaque type use restricts opaque type by using the generic parameter `T` twice
  --> $DIR/generic_duplicate_param_use4.rs:10:1
   |
LL | / fn one<T: Debug>(t: T) -> Two<T, T> {
LL | |
LL | |     t
LL | | }
   | |_^

error[E0277]: `U` doesn't implement `std::fmt::Debug`
  --> $DIR/generic_duplicate_param_use4.rs:8:1
   |
LL | type Two<T, U> = impl Debug;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `U` cannot be formatted using `{:?}` because it doesn't implement `std::fmt::Debug`
...
LL | fn three<T, U: Debug>(_: T, u: U) -> Two<T, U> {
   |             -- help: consider further restricting this bound: `U: std::fmt::Debug +`
LL |     u
   |     - this returned value is of type `U`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `U`
   = note: the type `U` must only rely on bounds defined on the type

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
